# dkk-flightmanager

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  config.example.toml  eslint.config.js  package.json  pyproject.toml  satellite-weather-plan.md  tasks.py
src/flightmanager/: __init__.py  _devserver.py  _pipeline_lock.py  _server_state.py  adaptive_route.py  batch.py  buildings.py  cache.py  cli.py  config.py  crs.py  drones.toml  elevation.py  forecast.py  geo_cache.py  geometry.py  homes_kml.py  job_store.py  kml_export.py  launch_sites.py  logging_setup.py  manifest.py  mcp_server.py  net_stats.py  obstacle_heights.py  parcels.py  pipeline.py  powerlines.py  preview.py  properties.py  raster.py  report.py  route.py  satellites.py  server.py  simplify.py  tilemap.py  waylines_builder.py  waypoints.py  weather.py  (+2 more)
src/flightmanager/forecasting/: forecast.py  launch_sites.py  satellites.py
src/flightmanager/geo/: buildings.py  crs.py  elevation.py  geometry.py  ntrip.py  parcels.py  powerlines.py  properties.py  raster.py  simplify.py  zones.py
src/flightmanager/reporting/: report.py  tilemap.py
src/flightmanager/routers/: execution.py  management.py  settings.py
src/flightmanager/routing/: adaptive_route.py  homes_kml.py  kml_export.py  obstacle_heights.py  route.py  waylines_builder.py  waypoints.py  wpml.py
src/flightmanager/storage/: batch.py  cache.py  geo_cache.py  job_store.py  manifest.py
src/flightmanager/templates/: base.css  jobs.css  legend.css  map.css  preview.html  settings.css  ui.html
src/flightmanager/templates/js/: api.js  batch-modal.js  battery-timeline.js  bulk-ops.js  card-menu.js  cesium-view.js  dirty-tracking.js  drag-reorder.js  event-stream.js  forecast-bar.js  form-controls.js  job-ops.js  jobs-panel.js  launch-sites.js  legend.js  main.js  map-init.js  map-layers.js  map-view.js  measurement.js  modal-utils.js  multi-select.js  polygon-bridge.js  polygon-edit.js  preview-runner.js  refresh-banner.js  route-planner.js  settings-panel.js  stat-view.js  state.js  status-panel.js  takeoff.js  tpl-modal.js  utils.js
src/flightmanager/templates/js/core/: dirty-tracking.js  event-stream.js  main.js  state.js  store.js
src/flightmanager/templates/js/editor/: form-controls.js  polygon-bridge.js  polygon-edit.js  preview-runner.js  route-planner.js  takeoff.js
src/flightmanager/templates/js/forecast/: battery-timeline.js  forecast-bar.js  launch-sites.js  rtk-stations.js  stat-view.js
src/flightmanager/templates/js/jobs/: batch-modal.js  bulk-ops.js  card-menu.js  drag-reorder.js  job-ops.js  jobs-panel.js  multi-select.js
src/flightmanager/templates/js/map/: legend.js  map-init.js  map-layers.js  map-view.js  measurement.js
src/flightmanager/templates/js/panels/: color-picker.js  modal-utils.js  refresh-banner.js  settings-panel.js  status-panel.js  tpl-modal.js
src/flightmanager/templates/js/three-d/: cesium-view.js
src/flightmanager/web/: _server_state.py  server.py
src/flightmanager/web/routers/: execution.py  insights.py  management.py  settings.py
src/jobgen/: __init__.py  _devserver.py  _pipeline_lock.py  _server_state.py  batch.py  buildings.py  cache.py  cli.py  config.py  drones.toml  elevation.py  geo_cache.py  geometry.py  homes_kml.py  job_store.py  logging_setup.py  manifest.py  mcp_server.py  net_stats.py  parcels.py  pipeline.py  powerlines.py  preview.py  properties.py  raster.py  route.py  server.py  simplify.py  waypoints.py  wpml.py  zones.py
src/jobgen/routers/: execution.py  management.py  settings.py
src/jobgen/templates/: base.css  jobs.css  map.css  preview.css  preview.html  preview.js  settings.css  ui.css  ui.html  ui.js
src/jobgen/templates/js/: batch-modal.js  battery-timeline.js  bulk-ops.js  card-menu.js  cesium-view.js  color-picker.js  dirty-tracking.js  drag-reorder.js  event-stream.js  form-controls.js  job-ops.js  jobs-panel.js  legend.js  main.js  map-init.js  map-layers.js  map-view.js  measurement.js  multi-select.js  polygon-bridge.js  polygon-edit.js  preview-runner.js  route-planner.js  settings-panel.js  stat-view.js  state.js  status-panel.js  takeoff.js  utils.js
tests/: test_adaptive_route.py  test_batch.py  test_buildings.py  test_cache.py  test_config.py  test_crs.py  test_elevation.py  test_forecast.py  test_geo_cache.py  test_geometry.py  test_job_store.py  test_kml_export.py  test_launch_sites.py  test_logging_setup.py  test_mcp_server.py  test_merge_split_order.py  test_ntrip.py  test_obstacle_heights.py  test_parcels.py  test_pipeline.py  test_properties.py  test_raster.py  test_report.py  test_route_plan.py  test_route_rename.py  test_satellites.py  test_server_security.py  test_session_store.py  test_simplify.py  test_tilemap.py  test_weather.py  test_wpml.py  test_zones.py
