[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dkk-flightmanager"
version = "1.7.0"
description = "DJI terrain-following flight manager for Finnish agricultural field surveys"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "lxml>=5.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.0",
    "tomli-w>=1.0",
    "mcp>=1.0",
    "filelock>=3.12",
    "skyfield>=1.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "radon>=6.0",
    "invoke>=2.2",
]

[project.scripts]
flightmanager = "flightmanager.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flightmanager = ["templates/*.html", "templates/*.css", "templates/*.js", "drones.toml"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "C901"]
ignore = ["E501"]  # line length not enforced; focus on unused imports and complexity
# E = pycodestyle errors, F = pyflakes, C901 = McCabe complexity

[tool.ruff.lint.per-file-ignores]
# load_dotenv() must run before project imports in these entry points
"src/flightmanager/_devserver.py" = ["E402"]
"src/flightmanager/cli.py" = ["E402"]
"src/flightmanager/preview.py" = ["E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.radon]
# radon cc: cyclomatic complexity  (run: radon cc src/flightmanager -s -n C)
# radon mi: maintainability index  (run: radon mi src/flightmanager -s -n B)
# radon raw: raw line counts        (run: radon raw src/flightmanager -s)
exclude = "tests/*"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: hits live network services — run with -m integration",
]
